--- a/BlazorApp/Pages/UIComponents/Buttons.razor
+++ b/BlazorApp/Pages/UIComponents/Buttons.razor
@@ -16,7 +16,7 @@
 
     private void Message()
     {
-        navMgr.NavigateTo("/MessagePlatform");
+        navMgr.NavigateTo($"/MessagePlatform");
     }
 
     private void Account()
