Message Search and sending fixed

--- a/BlazorApp/Pages/MessagePlatform.razor
+++ b/BlazorApp/Pages/MessagePlatform.razor
@@ -180,7 +180,7 @@ else
         }
         else
         {
-            users = users?.Where(u => u.UserName.Equals(userName));
+            users = new []{await userService.SearchTutorByUsername(userName)};
         }
         
         
